# mems-ins-gnss-loose

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
docs/: ARCHITECTURE.md  BUILD.md  CODING_STYLE.md  LOGGING.md
estimator/: pose_estimator.cpp  pose_estimator.h
eval/: estimator_eval.cpp  ins-eval.cpp  nav_evaluator.hpp  pose_evaluator.cpp
filter/: filter_model.h  gi_loose_filter.cpp  gi_loose_filter.h  gins_config.cpp  gins_config.h
ins/: pins.cpp  pins.h
io/: gnss_data_parser.h  imu_data_parser.h  nav_result_parser.h  nav_result_saver.cpp  nav_result_saver.h  ref_data_parser.h  sensor_data_provider.hpp
measurement/: gnss.h  imu.h  imu_time_aligner.cpp  imu_time_aligner.h  nav_result.h  ref.h
state/: state.h
utils/: constants.h  earth_model.cpp  earth_model.h  exceptions.h  logger.cpp  logger.h  rotation.h
